tests/ui/env-macro/env-arg-2-not-string-literal.rs
fn main() { env!("one", 10); } //~ ERROR: expected string literal
